# Hw4-gaphify-obcidian-Reverse-engineering

./: .env-example  .gitignore  README.md  pyproject.toml
artifacts/hotmd/: hot_after_20260616T152432Z.md  hot_after_20260616T152455Z.md  hot_after_20260616T153532Z.md  hot_after_20260616T153534Z.md  hot_after_20260616T155157Z.md  hot_before_20260616T113637Z.md  hot_before_20260616T114733Z.md  hot_before_20260616T122405Z.md  hot_before_20260616T135856Z.md  hot_before_20260616T150956Z.md  hot_before_20260616T151015Z.md  hot_before_20260616T155241Z.md
assets/screenshots/: README.md  desktop.ini
config/: rate_limits.json  setup.json
docs/: PLAN.md  PRD.md  PRD_agent_workflow.md  PRD_dynamic_hotmd.md  PRD_graphify_pipeline.md  PRD_token_efficiency.md  TODO.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
obsidian/: hot.md  index.md
obsidian/nodes/: mathsquiz_mathsquiz.md  mathsquiz_mathsquiz_step1.md  mathsquiz_mathsquiz_step2.md  mathsquiz_mathsquiz_step2_ask_question.md  mathsquiz_mathsquiz_step2_print_final_scores.md  mathsquiz_mathsquiz_step2_welcome_message.md  mathsquiz_mathsquiz_step3.md  mathsquiz_mathsquiz_step3_ask_question.md  mathsquiz_mathsquiz_step3_print_final_scores.md  mathsquiz_mathsquiz_step3_welcome_message.md  mathsquiz_readme.md  mathsquiz_readme_introduction.md  mathsquiz_readme_maths_quiz.md  mathsquiz_readme_objectives.md  mathsquiz_readme_the_files.md  polygons_polygons.md  polygons_polygons_calc_polygon_details.md  polygons_polygons_draw_polygon.md  (+7 more)
tests/: conftest.py
(+393 files in other folders)
