[project]
name = "ex04-agent"
version = "1.00"
description = "EX04 graph-guided reverse engineering agent (Dr. Yoram Segal)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core",
    "langgraph",
]

[project.scripts]
ex04-agent = "ex04_agent.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ex04_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["src/ex04_agent/main.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "data",
    "artifacts",
    "_pdf_extracts",
    ".venv",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
